fix: fixed translate output not showing properly

--- a/style.css
+++ b/style.css
@@ -69,8 +69,6 @@ body {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
     padding: 1rem;
     background-color: var(--primary-color);
